fix(docs): fixed mobile jumplinks don't scroll

--- a/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
+++ b/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
@@ -14,6 +14,21 @@
   box-shadow: var(--pf-global--BoxShadow--sm-bottom)
 }
 
+/* Mobile jumplinks */
+@media (max-width: 1450px) {
+  .ws-toc.pf-m-expanded .pf-c-jump-links__main {
+    max-height: 65vh;
+    overflow: auto;
+  }
+  
+  .ws-toc .pf-c-jump-links__header {
+    position: sticky;
+    top: 0;
+    background-color: var(--pf-global--BackgroundColor--200);
+    z-index: 2;
+  }
+}
+
 /* Hide TOC scrollbar Chrome, Safari & Opera */
 .ws-toc::-webkit-scrollbar {
   display: none;
